--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <script src="js/loader.min.js"></script>
+    <script src="js/loader.js"></script>
     <script>
     </script>
     <script>
